--- a/env-bot/Makefile
+++ b/env-bot/Makefile
@@ -1,8 +1,8 @@
 # MEMO:
 # crontab -e
-# 0 9,18 * * * sudo /home/pi/github.com/ddddddO/sensor-pi/env-bot/bme280_store.py > /tmp/bme_result && plotter && cat /tmp/bme_result | /home/pi/github.com/ddddddO/sensor-pi/env-bot/tweet.py
+# 0 9,18 * * * /home/pi/go/bin/dagu start /home/pi/github.com/ddddddO/sensor-pi/env-bot/dag.yaml 1> /dev/null
 tweet:
-	sudo ./bme280_store.py > /tmp/bme_result && plotter && cat /tmp/bme_result | ./tweet.py
+	dagu start dag.yaml
 
 # Create database: sqlite3 environment.sqlite3
 # Create table: execute schema.sql TODO: using migration tool
