--- a/env-bot/dag.yaml
+++ b/env-bot/dag.yaml
@@ -2,6 +2,8 @@ name: "env-bot"
 env:
   DSN: "/home/pi/github.com/ddddddO/sensor-pi/env-bot/environment.sqlite3"
   PRESSURE_IMAGE_PATH: "/tmp/pressure.png"
+  TEMPERATURE_IMAGE_PATH: "/tmp/temperature.png"
+  HUMIDITY_IMAGE_PATH: "/tmp/humidity.png"
 steps:
   - name: "sensor"
     description: "get and store data from bme280"
