--- a/env-bot/subscriber_from_sns/makefile
+++ b/env-bot/subscriber_from_sns/makefile
@@ -2,4 +2,4 @@ build:
 	GOOS=linux GOARCH=amd64 go build -o main
 
 zip: build
-	rm subscriber_from_sns.zip && zip -r subscriber_from_sns.zip main
+	rm -f subscriber_from_sns.zip && zip -r subscriber_from_sns.zip main
