add subscriber_from_sns for co2

--- a/env-bot/subscriber_from_sns/makefile
+++ b/env-bot/subscriber_from_sns/makefile
@@ -4,7 +4,7 @@
 # zip: build
 # 	rm -f subscriber_from_sns.zip && zip -r subscriber_from_sns.zip main
 
-zip_all: zip_humidity zip_pressure zip_temperature
+zip_all: zip_humidity zip_pressure zip_temperature zip_co2
 
 build_humidity:
 	cd humidity/ && GOOS=linux GOARCH=amd64 go build -o main
@@ -23,3 +23,9 @@ build_temperature:
 
 zip_temperature: build_temperature
 	cd temperature/ && rm -f subscriber_from_sns_temperature.zip && zip -r subscriber_from_sns_temperature.zip main
+
+build_co2:
+	cd co2/ && GOOS=linux GOARCH=amd64 go build -o main
+
+zip_co2: build_co2
+	cd co2/ && rm -f subscriber_from_sns_co2.zip && zip -r subscriber_from_sns_co2.zip main
