--- a/env-bot/Makefile
+++ b/env-bot/Makefile
@@ -1,5 +1,6 @@
-update_dagu:
-	go install github.com/yohamta/dagu/cmd@latest && mv /home/pi/go/bin/cmd /home/pi/go/bin/dagu
+# MEMO: github.com/yohamta/dagu/.github/workflows/release.yaml を参考にコマンド実行後、GOOS=linux GOARCH=arm GOARM=7 go build -o dagu の後に、ラズパイへバイナリを転送する
+# update_dagu:
+# 	go install github.com/yohamta/dagu/cmd@latest && mv /home/pi/go/bin/cmd /home/pi/go/bin/dagu
 
 # crontab -e
 # 0 9,18 * * * /home/pi/go/bin/dagu start /home/pi/github.com/ddddddO/sensor-pi/env-bot/dag.yaml 1> /dev/null
